--- a/css/site.css
+++ b/css/site.css
@@ -1,5 +1,5 @@
 .navbar{
-	margin: 0 0 0 0;
+    margin: 0 0 0 0;
 }
 
 body{
@@ -7,24 +7,24 @@ body{
 }
 
 .brandText{
-	font-weight: bolder;
+    font-weight: bolder;
 }
 .userDropdown{
-	color:black;
-	font-weight: 500;
+    color:black;
+    font-weight: 500;
 }
 
 #navbartext{
-	color:white;
+    color:white;
 }
 
 #navbartext > p{
-	font-size: 20px;
-	font-weight: bolder;
+    font-size: 20px;
+    font-weight: bolder;
 }
 
 #navbartext > p:hover{
-	color:#337ab7;
+    color:#337ab7;
 }
 
 .navbar-static-top .navbar-nav > li > a:hover, .navbar-static-top .navbar-nav > li > a:focus {
@@ -32,47 +32,48 @@ body{
 }
 
 .firstContent{
-	background-image: linear-gradient(
+    background-image: linear-gradient(
       rgba(0, 0, 0, 0.6),
       rgba(0, 0, 0, 0.6)
     ),url('../img/temporary.jpg');
-	background-size: cover;
+    background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
     height: 620px;
-   	position: relative;
-   	box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
+    position: relative;
+    box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
 }
 
 .containerFirst{
-	height: 600px;
-	font-size: 20px;
-	font-weight: bold;
-	color: white;
+    height: 600px;
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+    width: 100%;
 }
 
 .containerFirst h1{
-	font-weight: bolder;
-	font-size: 65px;
+    font-weight: bolder;
+    font-size: 65px;
 }
 .containerFirst h2{
-	font-weight: bolder;
-	font-size: 65px;
+    font-weight: bolder;
+    font-size: 65px;
 }
 
 .secondContent{
     width: 100%;
-    height: 620px;
-   	position: relative;
-   	background-color: #ecf0f1;
+    height: 660px;
+    position: relative;
+    background-color: #ecf0f1;
 }
 
 .thirdContent{
-	width: 100%;
+    width: 100%;
     height: 200px;
-   	position: relative;
-   	background-color: #2196F3;
-   	background-image: linear-gradient(
+    position: relative;
+    background-color: #2196F3;
+    background-image: linear-gradient(
       rgba(0, 0, 0, 0.6),
       rgba(0, 0, 0, 0.6)
     ),url('../img/abstract.jpg');
@@ -81,157 +82,158 @@ body{
 }
 
 .fourthContent{
-	width: 100%;
-    height: 620px;
-   	position: relative;
-   	background-color: #ecf0f1;
+    width: 100%;
+    height: 400px;
+    position: relative;
+    background-color: #ecf0f1;
 }
 
 .fifthContent{
-	background-image: linear-gradient(
+    background-image: linear-gradient(
       rgba(0, 0, 0, 0.6),
       rgba(0, 0, 0, 0.6)
     ),url('../img/leadership.jpg');
-	background-size: cover;
+    background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
     height: 200px;
-   	position: relative;
-   	box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
-   	background-position: 0% 10%;
+    position: relative;
+    box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
+    background-position: 0% 10%;
 }
 
 .contactUs{
-	width: 100%;
+    width: 100%;
     height: 400px;
-   	position: relative;
-   	background-color: #ecf0f1;
+    position: relative;
+    background-color: #ecf0f1;
 }
 
 .event{
-	width: 100%;
+    width: 100%;
     height: 400px;
-   	position: relative;
-   	background-color: white;
+    position: relative;
+    background-color: white;
 }
 
 .socialMedia{
-	width: 100%;
+    width: 100%;
     height: 150px;
-   	position: relative;
-   	background-color: #bdc3c7;
+    position: relative;
+    background-color: #bdc3c7;
 }
 
 .footer{
-	width: 100%;
+    width: 100%;
     height: 300px;
-   	position: relative;
-   	background-color: #2c3e50;
+    position: relative;
+    background-color: #2c3e50;
 }
 
 .bolder{
-	font-weight: bolder;
+    font-weight: bolder;
 }
 
 .bold{
-	font-weight: 00;
+    font-weight: 00;
 }
 
 .larger{
-	font-size: 60px;
+    font-size: 60px;
 }
 
-.row{
-	margin-left: 20px;
-}
 
 .large{
-	font-size:50px;
+    font-size:50px;
+}
+
+.largest{
+    font-size:100px;
 }
 
 .info-text{
-	font-size:16px;
-	text-align: justify;
+    font-size:16px;
+    text-align: justify;
 }
 
 .subtext{
-	text-align: left;
+    text-align: left;
 }
 
 .vision-text{
-	color: white;
+    color: white;
 }
 
 .absolute{
-	position: inherit;
+    position: inherit;
 }
 
 .midnight-blue{
-	color: #2c3e50;
+    color: #2c3e50;
 }
 
 .blog_container{
-	background-color:white;
-	width: 900px;
-	height: 400px;
-	-webkit-box-shadow: 0px 0px 10px -2px rgba(0,0,0,0.75);
+    background-color:white;
+    width: 900px;
+    height: 400px;
+    -webkit-box-shadow: 0px 0px 10px -2px rgba(0,0,0,0.75);
 -moz-box-shadow: 0px 0px 10px -2px rgba(0,0,0,0.75);
 box-shadow: 0px 0px 10px -2px rgba(0,0,0,0.75);
 }
 
 .blog_content{
-	text-align: left;
-	margin-left: 20px;
+    text-align: left;
+    margin-left: 20px;
 }
 
 .firstBlog, .secondBlog{
 
-	padding-top: 40px;
-	padding-right: 40px;
+    padding-top: 40px;
+    padding-right: 40px;
 }
 
 .col-sm-7 input, .col-sm-7 textarea, .col-sm-7 button{
-	width: 100%;
-	margin-left: 5px;
-	border-style: none;
+    width: 100%;
+    margin-left: 5px;
+    border-style: none;
 }
 .inputs{
-	margin-top: 50px;
+    margin-top: 50px;
 }
 
 .col-sm-7 button{
-	background-color: white;
-	border-style: solid;
-	border-width: 1px;
-	border-color: black;
-	margin-top: 20px;
+    background-color: white;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    margin-top: 20px;
 }
 
 .contactUs p{
-	font-size: 24px;
+    font-size: 24px;
 }
 
 .submessages{
-	text-align: left;
+    text-align: left;
 }
 
 .socialMedia .col-sm-4 h2{
-	display: inline-block;
+    display: inline-block;
 }
 
 .footer{
-	color: white;
+    color: white;
 }
 
 .footer p{
-	font-size: 10px;
+    font-size: 10px;
 }
 .footer .row{
-	margin-left: 100px;
+    margin-left: 100px;
 }
 
 .registrationButton{
-	border: none;
+    border: none;
     color: white;
     padding: 15px 32px;
     text-align: center;
@@ -243,151 +245,169 @@ box-shadow: 0px 0px 10px -2px rgba(0,0,0,0.75);
 }
 
 .solo{
-	background-color:#f39c12;
+    background-color:#f39c12;
 }
 
 .group{
-	background-color: black;
-	width: 100%;
+    background-color: black;
+    width: 100%;
 }
 
 .addRow{
-	height:20px;
-	padding: 0;
-	padding-left: 10px;
-	padding-right: 10px;
-	background-color: #34495e;
+    height:20px;
+    padding: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: #34495e;
 }
 
 .registrationForm{
-	padding: 10px 10px;
-	width:100%;
-	height: 100%;
-	color: #2c3e50;
+    padding: 10px 10px;
+    width:100%;
+    height: 100%;
+    color: #2c3e50;
 }
 
 .inputReg{
-	border-radius: 0px;
-	margin-top:10px;
+    border-radius: 0px;
+    margin-top:10px;
 }
 
 .form-group label{
-	font-size: 14px;
+    font-size: 14px;
 }
 
 .firstContentReg{
-	background-image: linear-gradient(
+    background-image: linear-gradient(
       rgba(0, 0, 0, 0.6),
       rgba(0, 0, 0, 0.6)
     ),url('../img/wollpepper.jpg');
     width: 100%;
     height: 620px;
-   	position: relative;
-   	box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
+    position: relative;
+    box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
 }
 
 .secondContentReg{
-	background-image: linear-gradient(
+    background-image: linear-gradient(
       rgba(41, 128, 185, 0.6),
       rgba(41, 128, 185, 0.6)
     ),url('../img/wollpiper.jpg');
     width: 100%;
     height: 620px;
-   	position: relative;
-   	box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
+    position: relative;
+    box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
 }
 
 .thirdContentReg{
-	background-color: #bdc3c7;
+    background-color: #bdc3c7;
     width: 100%;
     height: 620px;
-   	position: relative;
-   	box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
+    position: relative;
+    box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
+}
+
+.firstContentBlog{
 }
 
 .addRowReg{
-	width: 100%;
-	background-color: #34495e;
+    width: 100%;
+    background-color: #34495e;
 }
 
 .group{
-	background-color: #2c3e50;
+    background-color: #2c3e50;
 }
 
 .mainButton{
-	width: 250px;
-	height: 75px;
-	background-color: transparent;
-	border-radius: 5px;
+    width: 250px;
+    height: 75px;
+    background-color: transparent;
+    border-radius: 5px;
 }
 
 .groupContainer{
-	background-color: white;
-	width: 100%;
-	height: 100%;
-	position: relative;
-	padding:10px 10px;
+    background-color: white;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    padding:10px 10px;
 
-   	box-shadow: 1px 0px 8px rgba(50, 50, 50, 0.75);
+    box-shadow: 1px 0px 8px rgba(50, 50, 50, 0.75);
 }
 
 .thirdContentReg h1, .thirdContentReg h4{
-	color: #2c3e50;
+    color: #2c3e50;
 }
 
 .regButton{
-	width: 250px;
-	height: 75px;
-	background-color: #2c3e50;
-	border-style: none;
-	color: #ecf0f1;
-	font-size: 24px;
+    width: 250px;
+    height: 75px;
+    background-color: #2c3e50;
+    border-style: none;
+    color: #ecf0f1;
+    font-size: 24px;
 }
 
-nav a{
-	cursor: pointer;
+.navText h1 a{
+    cursor: pointer;
+
+}
+.navText h1 a:hover{
+    text-decoration: none;
+    color: #ecf0f1;
+    font-weight: bolder;
 }
 
 .repInfo{
-	color: #2c3e50;
+    color: #2c3e50;
 }
 
 .aboutUsMainText{
-	font-size: 300px;
+    font-size: 300px;
 
 }
 
 .firstContentAbout{
-	background-image: linear-gradient(
-      rgba(0, 0, 0, 0.6),
-      rgba(0, 0, 0, 0.6)
-    ),url('../img/wollpipper.jpg');
-	background-size: cover;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 620px;
-   	position: relative;
-   	box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
+    background-color: #ecf0f1;
 }
 
+
+
+
+
 .cloud{
-	color: #ecf0f1;
+    color: #ecf0f1;
 }
 
 .secondContentAbout{
-	width: 100%;
+    width: 100%;
     height: 620px;
-   	position: relative;
-   	background-color: #ecf0f1;
+    position: relative;
+    background-color: #ecf0f1;
 }
 
 .nfjpiaLogo p{
-	font-size: 20px;
+    font-size: 20px;
 }
 
 .thirdContentAbout{
-	width: 100%;
+    width: 100%;
     height: 620px;
-   	position: relative;
-   	background-color: #bdc3c7;
+    position: relative;
+    background-color: #bdc3c7;
+}
+
+.navText{
+    margin-top:350px;
+}
+
+.noHover:hover{
+    text-decoration: none;
+    color: #2c3e50;
+}
+
+.noHover2:hover{
+    text-decoration: none;
+    color: #2c3e50;
 }
