--- a/css/site.css
+++ b/css/site.css
@@ -411,3 +411,22 @@ box-shadow: 0px 0px 10px -2px rgba(0,0,0,0.75);
     text-decoration: none;
     color: #2c3e50;
 }
+
+.underConstruction{
+    background-image: linear-gradient(
+      rgba(0, 0, 0, 0.6),
+      rgba(0, 0, 0, 0.6)
+    ),url('../img/construction.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 1000px;
+    position: relative;
+    box-shadow: 2px 2px 1px rgba(50, 50, 50, 0.75);
+    padding: 0 0 0;
+    margin: 0;
+}
+
+body{
+    margin:0;
+}
