--- a/css/site.css
+++ b/css/site.css
@@ -281,7 +281,7 @@ box-shadow: 0px 0px 10px -2px rgba(0,0,0,0.75);
     background-image: linear-gradient(
       rgba(0, 0, 0, 0.6),
       rgba(0, 0, 0, 0.6)
-    ),url('../img/wollpepper.jpg');
+    ),url('../img/bg1.jpg');
     width: 100%;
     height: 620px;
     position: relative;
@@ -403,14 +403,17 @@ box-shadow: 0px 0px 10px -2px rgba(0,0,0,0.75);
 }
 
 .noHover:hover{
-    text-decoration: none;
-    color: #2c3e50;
+    text-decoration-line: underline;
+    text-decoration-line: overline;
+    color: #ecf0f1;
+
 }
 
 .noHover2:hover{
-    text-decoration: none;
+    text-decoration-line: underline;
     color: #2c3e50;
 }
+
 
 .underConstruction{
     background-image: linear-gradient(
